--- a/index.css
+++ b/index.css
@@ -126,7 +126,7 @@
         background-repeat: no-repeat;
     }
     .sidebar{
-        margin: -1.7em 1.5em;
+        margin: 1rem 1.5em;
     }
 }
 
@@ -148,13 +148,17 @@ body{
 }
 
 #body{
+    -webkit-transition: margin-left .5s;
+    -moz-transition: margin-left .5s;
+    -o-transition: margin-left .5s;
     transition: margin-left .5s;
 }
 
 #blogtitle{
     font-family : Roboto;
     text-align: center;
-    margin-bottom: 10px;}
+    margin-bottom: 10px;
+}
 
 #motto{
     margin: 0.2em;
@@ -164,7 +168,6 @@ body{
 
 
 .postbody{
-
     font-family: Raleway;
     color: black;
     align-self: center;
@@ -173,7 +176,6 @@ body{
 
 .post
 {
-
     background-color: rgb(255, 255, 255);
     font-family: Raleway;
     color: black;
@@ -219,6 +221,9 @@ footer{
     background-color: #161616; 
     overflow-x: hidden;
     padding-top: 4em;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -o-transition: 0.3s;
     transition: 0.3s;
     text-align:center;
     opacity:1;
@@ -274,6 +279,9 @@ i{
 /* ----------------------------------rest body when sidenav is open ----------------------------------------*/
 
 .rest-body{
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -o-transition: 0.3s;
     transition: 0.3s;
 }
 
@@ -282,6 +290,9 @@ i{
 .sidebar{
     cursor: pointer;
     border-radius:25px;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -o-transition: 0.3s;
     transition: 0.3s;
     position: fixed;
     z-index: 2;
@@ -293,11 +304,16 @@ i{
     height: 4px;
     background-color: rgb(255, 255, 255);
     margin: 5px 0px;
+    -webkit-transition: 0.4s;
+    -moz-transition: 0.4s;
+    -o-transition: 0.4s;
     transition: 0.4s;
 }
 
 .change .bar1 {
     -webkit-transform: rotate(-45deg) translate(-8px, 5px);
+    -moz-transform: rotate(-45deg) translate(-8px, 5px);
+    -o-transform: rotate(-45deg) translate(-8px, 5px);
     transform: rotate(-45deg) translate(-8px, 5px);
 
 }
@@ -306,6 +322,8 @@ i{
 
 .change .bar3 {
     -webkit-transform: rotate(45deg) translate(-8px, -5px);
+    -moz-transform: rotate(45deg) translate(-8px, -5px);
+    -o-transform: rotate(45deg) translate(-8px, -5px);
     transform: rotate(45deg) translate(-8px, -5px);
 }
 
@@ -316,6 +334,9 @@ i{
     top: -100px; /* Hide the navbar 50 px outside of the top view */
     width: 100%; /* Full width */
     transition: top 0.3s; /* Transition effect when sliding down (and up) */
+    -moz-transition: top 0.3s;
+    -webkit-transition: top 0.3s;
+    -o-transition: top 0.3s;
     z-index: 1;
     display:inline-block;
 }
